syntax = "proto3";

// Container daemon API for communication between dataplane agent and PID1 daemon
// running inside function executor containers.
package container_daemon_pb;

// Request to send a signal to the managed process
message SendSignalRequest {
    // Signal number to send (e.g., 15 for SIGTERM, 9 for SIGKILL)
    optional int32 signal = 1;
}

// Response after sending a signal
message SendSignalResponse {
    // Whether the signal was sent successfully
    optional bool success = 1;
    // Error message if signal failed
    optional string error = 2;
}

// Health check request
message HealthRequest {
}

// Health check response
message HealthResponse {
    // Whether the daemon is healthy and ready
    optional bool healthy = 1;
    // Daemon version
    optional string version = 2;
    // Uptime in seconds
    optional uint64 uptime_secs = 3;
}

// Container daemon service - runs as PID1 inside function executor containers
// and provides an API for the dataplane agent to manage the function executor process.
service ContainerDaemon {
    // Send a signal to the managed process
    rpc SendSignal(SendSignalRequest) returns (SendSignalResponse);

    // Health check to verify daemon is ready
    rpc Health(HealthRequest) returns (HealthResponse);
}
